CAPSTONE PROJECT 1/Enterprise-SaaS-Capstone-Project-skillfyme/k8s/cpu-stress.yaml
apiVersion: v1
kind: Pod
metadata:
  labels:
    run: cpu-stress
  name: cpu-stress
spec:
  securityContext:
    runAsNonRoot: true
    runAsUser: 1000
    seccompProfile:
      type: RuntimeDefault
  containers:
  - args:
    - stress
    - --cpu
    - "2"
    - --timeout
    - 180s
    image: polinux/stress
    name: cpu-stress
    resources:
      limits:
        cpu: 500m
        memory: 100Mi
    securityContext:
      allowPrivilegeEscalation: false
      capabilities:
        drop: ["ALL"]
  dnsPolicy: ClusterFirst
  restartPolicy: Never
